--- a/crypto_bank/app/src/main/res/layout/activity_home.xml
+++ b/crypto_bank/app/src/main/res/layout/activity_home.xml
@@ -24,10 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="40dp"
         android:text="Pregled transakcij"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textBalance" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSend" />
 
     <Button
         android:id="@+id/buttonProfil"
@@ -35,8 +35,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="40dp"
         android:text="Profil"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonTransakcije" />
+
+    <Button
+        android:id="@+id/buttonSend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="40dp"
+        android:text="Send"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textBalance" />
 </androidx.constraintlayout.widget.ConstraintLayout>
